Blender GPU compositor trims image by 50% compared to CPU compositor #112883

Closed
opened 2023-09-26 03:14:44 +02:00 by Eliot Mack · 3 comments

System Information
Operating system: Windows 10 x64
Graphics card: NVidia Quadro RTX 8000

Blender Version
Broken: blender-4.0.0-alpha+main.407e2b9f700f-windows.amd64-release

Short description of error

In the Blender compositor, with a single image input connected to a viewer, if the compositor is switched from Full Frame to GPU, the resulting image in the viewer is cut down to the Render Output size.

Exact steps for others to reproduce the error
Open up the attached blend file, refresh the Viewer node, and in the Options menu change the Execution Mode from Full Frame to GPU.

**System Information** Operating system: Windows 10 x64 Graphics card: NVidia Quadro RTX 8000 **Blender Version** Broken: blender-4.0.0-alpha+main.407e2b9f700f-windows.amd64-release **Short description of error** In the Blender compositor, with a single image input connected to a viewer, if the compositor is switched from Full Frame to GPU, the resulting image in the viewer is cut down to the Render Output size. **Exact steps for others to reproduce the error** Open up the attached blend file, refresh the Viewer node, and in the Options menu change the Execution Mode from Full Frame to GPU.
Eliot Mack added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-26 03:14:45 +02:00
Member

Thanks for the report. I can confirm. This feature (execution mode) is part of experimental compositor.

Thanks for the report. I can confirm. This feature (`execution mode`) is part of experimental compositor.
Pratik Borhade added
Module
VFX & Video
Status
Confirmed
Interest
Compositing
and removed
Status
Needs Triage
labels 2023-09-26 05:08:17 +02:00
Member

I am aware of that limitation, but the fix requires #112332, so I shall submit a fix once this one lands.

I am aware of that limitation, but the fix requires #112332, so I shall submit a fix once this one lands.
Omar Emara self-assigned this 2023-09-26 12:53:03 +02:00
Author

OK thanks.

OK thanks.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-12 13:07:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112883
No description provided.